# LearnX

./: .env.example  .gitignore  README.md  docker-compose.yml
client/: index.html  package-lock.json  package.json
client/src/: App.jsx
client/src/api/: auth.api.js  conversations.api.js
client/src/components/common/: ChatPanel.jsx  MediaViewer.jsx  NewConversationModal.jsx  Sidebar.jsx
client/src/hooks/: useConversation.jsx  useInitAuth.jsx
client/src/lib/: axios.js
client/src/pages/App/: AppHome.jsx  (+3 more)
client/src/router/: index.jsx  protectedRoute.jsx  publicRoute.jsx
client/src/store/: auth.store.js
server/ai/: .env.example  main.py  pyproject.toml  worker.py
server/ai/app/: config.py
server/ai/app/clients/: node_api_client.py  redis_client.py  vector_store_client.py
server/ai/app/rag/: retrieval.py  vector_store.py
server/ai/app/routers/: chat_router.py
server/ai/app/schemas/: chat_schema.py
server/ai/app/services/: process_conversation.py
server/ai/app/services/chat/: chat_service.py  prompts.py  schemas.py
server/ai/app/services/conversation/: process_conversation.py
server/ai/app/services/ingestion/: exceptions.py  pdf.py  video.py  youtube.py
server/ai/app/services/processing/: chunking.py  transcription.py
server/ai/app/utils/: file_utils.py
server/ai/app/workers/: conversation_worker.py
server/ai/app/workflows/: audio_workflow.py  pdf_workflow.py  video_workflow.py  youtube_workflow.py
server/api/: .env.example  package-lock.json  package.json
server/api/prisma/: schema.prisma
server/api/src/: app.js  server.js
(+46 files in other folders)
