[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "faster-whisper>=1.2.1",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.2",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "pydantic-settings>=2.14.1",
    "redis>=8.0.0",
    "requests>=2.34.2",
    "yt-dlp>=2026.6.9",
]
